# lattice-lettuce-fix

./: .bench_instance  .gitignore  ARCHITECTURE.md  BUILD  CONTRIBUTING.md  GITHUB_ISSUE_REPORT.md  LATTICE_LINUX_MISSION_COMPLETE.md  LINUX_PORT.md  README.md  SYNTAX.md  WORKSPACE  agent.md  benchmark_all.sh  build_and_run_df.py  build_and_test_df.sh  build_errors.txt  log.txt  manifest.salt  repro.sh  run_panic_test.py  std  test_compositor_patch.py  test_parse.salt  test_yielding.salt
salt-front/: Cargo.toml  README.md  benchmark_log.txt  benchmark_log_2.txt  benchmark_log_3.txt  build_err.txt  build_error.txt  build_log.txt  check_output.txt  check_output_final.txt  codegen_missed.txt  coverage.txt  coverage_log.txt  debug_log.txt  debug_output.txt  debug_trace.txt  final_benchmark_log.txt  final_benchmark_log_2.txt  final_benchmark_log_3.txt  full_log.txt  log.txt  runtime.c  salt_out.txt  stdlib_out.txt  test_bug.salt
salt-front/src/: cli.rs  driver.rs  evaluator.rs  fuzz_ast.rs  grammar.rs  grammar_tokens.rs  keywords.rs  lib.rs  main.rs  registry.rs  types.rs
salt-front/std/: comptime.salt  io.salt  log.salt  net.salt  status.salt  string.salt  time.salt
salt-front/tests/: alias_scope_test.rs  bool_storage_test.rs  canonical_resolution_test.rs  cli_test.rs  comptime_coverage.rs  const_integration.rs  cross_function_hydration_test.rs  debug_line_loc_test.rs  deterministic_ordering_test.rs  evaluator_test.rs  file_io_test.rs  grammar_test.rs  incremental_coverage.rs  intrinsic_recognition_test.rs  lib_test.rs  monomorphization_stress.rs  println_test.rs  (+13 more)
(+649 files in other folders)
