[package]
name = "salt-front"
version = "0.5.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
anyhow = "1.0"
arbitrary = { version = "1.4.2", features = ["derive"] }
z3 = "0.12"

[dev-dependencies]
insta = "1.0"
libfuzzer-sys = "0.4.10"
paste = "1.0.15"
tempfile = "3.24.0"
walkdir = "2.3"

