[package]
name = "salt-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for the Salt programming language"

[[bin]]
name = "salt-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
